fixed login logo picture issue on iOS

--- a/src/app/auth/forgot-password/forgot-password.component.css
+++ b/src/app/auth/forgot-password/forgot-password.component.css
@@ -1,1 +1,5 @@
 @import "../../../assets/vendor/floating-labels.css";
+
+.logo-img {
+  object-fit: contain;
+}
