--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,2 +1,5 @@
 @import "../../../assets/vendor/floating-labels.css";
 
+.logo-img {
+  object-fit: contain;
+}
