--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -6,3 +6,7 @@
   border-left: 5px solid #a94442;
 } */
 @import "../../../assets/vendor/floating-labels.css";
+
+.logo-img {
+  object-fit: contain;
+}
